# cddns

./: .config.json  .dockerignore  .gitignore  .ocamlformat  Dockerfile  cddns.opam  cddns.opam.locked  dune-project  flake.nix
cloudflare/: dns_target.ml  dns_target.mli  dune  record_id.ml  record_id.mli  record_response.ml  record_update.ml  zone_response.ml
cohttp_mock/: client.ml  client.mli  dune
ipify/: dune  main.ml  record.ml  source.ml  source.mli
ipify_test/: dune  main.ml
lib/: client.ml  client.mli  client_intf.ml  comparators.ml  comparators.mli  config.ml  converters.ml  converters.mli  dune  event.ml  exceptions.ml  logging_target.ml  logging_target.mli  record.ml  source.ml  source_intf.ml  target.ml  target_intf.ml
test/: dune
